# headset-PiCamera

./: .gitignore  CMakeLists.txt  Makefile  OdroidMain.c  Presentation.cpp  README.md  RaspberryMain.c  TestAudioOdroid.c  TestCapture.c  conf.conf  file.h264
cmake/: FindFFmpeg.cmake
common/: Frame.c  Packet.c  VideoLib.c
common/includes/: Frame.h  Packet.h  VideoLib.h
odroid/: ClientTCP.c  Display.c  Odroid.c  UDPReception.c
odroid/includes/: ClientTCP.h  Display.h  Odroid.h  UDPReception.h
raspberry/: Raspberry.c  ServerTCP.c  TestVideoGrab.cpp  UDPStreaming.c
raspberry/includes/: Raspberry.h  Server.h  ServerTCP.h  UDPStreaming.h  VideoGrab.h
raspberry/src/: VideoGrab.cpp
